--- a/Engine/ColorVision.Engine/Services/Terminal/CreateTerminal.xaml
+++ b/Engine/ColorVision.Engine/Services/Terminal/CreateTerminal.xaml
@@ -21,11 +21,15 @@
         </Style>
     </Window.Resources>
     <Grid Margin="5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="73*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0"  CornerRadius="4">
+        <Border Grid.Row="0"  CornerRadius="4" Grid.ColumnSpan="2" Margin="0,0,0,30" Grid.RowSpan="2">
             <StackPanel>
                 <DockPanel Margin="2" >
                     <TextBlock Text="{x:Static properties:Resources.Code}" MinWidth="50" />
@@ -38,7 +42,7 @@
             </StackPanel>
         </Border>
 
-        <Border Grid.Row="1" Height="30">
+        <Border Grid.Row="1" Height="30" Grid.ColumnSpan="2">
             <Button Content="{x:Static properties:Resources.Submit}" Foreground="White" Background="{StaticResource PrimaryBrush}"  Click="Button_Click" />
         </Border>
     </Grid>
