--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewSpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewSpectrum.xaml
@@ -43,11 +43,11 @@
                             <Image  Stretch="Uniform" Source="{DynamicResource DrawingImageSwitch}" />
                         </ToggleButton>
                         <ToggleButton x:Name="ToggleSpectrumType" Click="ToggleSpectrumType_Click" Margin="2,0,0,0" ToolTip="切换相对/绝对光谱">
-                            <TextBlock Text="相对" x:Name="SpectrumTypeText"/>
+                            <TextBlock Text="{x:Static properties:Resources.Relative}" x:Name="SpectrumTypeText"/>
                         </ToggleButton>
                         <Button Content="{x:Static properties:Resources.Inquire}" Click="SearchAdvanced_Click" Margin="2,0,0,0"/>
-                        <Button x:Name="Search" Content="高级查询" Click="SearchAdvanced_Click" Margin="2,0,0,0"/>
-                        <Button  Content="交换" Click="Exchange_Click" Margin="2,0,0,0"/>
+                        <Button x:Name="Search" Content="{x:Static properties:Resources.AdvanceSearch}" Click="SearchAdvanced_Click" Margin="2,0,0,0"/>
+                        <Button  Content="{x:Static properties:Resources.Exchange}" Click="Exchange_Click" Margin="2,0,0,0"/>
                     </ToolBar>
                 </ToolBarTray>
 
@@ -113,7 +113,7 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn  Header="批次号">
+                            <GridViewColumn  Header="{x:Static properties:Resources.BatchNumber}">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate  DataType="{x:Type local:ViewResultSpectrum}">
                                         <TextBlock Text="{Binding BatchID}"/>
