--- a/Engine/ColorVision.Engine/Templates/Jsons/CompoundImg/DisplayCompoundImg.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/CompoundImg/DisplayCompoundImg.xaml
@@ -12,7 +12,7 @@
         <StackPanel>
             <DockPanel Margin="0,0,0,5">
                 <Button  Content="{x:Static properties:Resources.Calculate}" DockPanel.Dock="Right"  HorizontalAlignment="Right" Click="RunTemplate_Click" />
-                <TextBlock Text="图像拼接" Width="60"/>
+                <TextBlock Text="{x:Static properties:Resources.ImageStitching}" Width="60"/>
                 <ComboBox x:Name="ComboxTemplate"  SelectedIndex="{Binding TemplateSelectedIndex}" Width="130" HorizontalAlignment="Left" Style="{StaticResource ComboBox.Small}" SelectedValuePath="Value" DisplayMemberPath="Key" />
                 <Grid Width="20" Margin="5,0" HorizontalAlignment="Left">
                     <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="15" Foreground="{DynamicResource GlobalTextBrush}"/>
