--- a/Engine/ColorVision.Engine/Templates/Jsons/Distortion2/DisplayDistortion2.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/Distortion2/DisplayDistortion2.xaml
@@ -29,7 +29,7 @@
                         <Button DockPanel.Dock="Right" Content="{x:Static properties:Resources.Open}" Click="Button_OpenLocal_Click" />
                     </StackPanel>
                 </TabItem>
-                <TabItem Background="Transparent" Header="服务" x:Name="AlgRawSelect" IsSelected="True">
+                <TabItem Background="Transparent" Header="{x:Static properties:Resources.Service}" x:Name="AlgRawSelect" IsSelected="True">
                     <StackPanel>
                         <DockPanel Margin="0,2">
                             <TextBlock Text="{x:Static properties:Resources.ImageSource}" Margin="0,0,10,0" Width="40"/>
@@ -58,10 +58,10 @@
                     </StackPanel>
 
                 </TabItem>
-                <TabItem  Background="Transparent" Header="批次号" x:Name="AlgBatchSelect" >
+                <TabItem  Background="Transparent" Header="{x:Static properties:Resources.BatchNumber}" x:Name="AlgBatchSelect" >
                     <StackPanel>
                         <DockPanel Margin="0,2">
-                            <TextBlock Text="批次号" Margin="0,0,10,0" Width="40"/>
+                            <TextBlock Text="{x:Static properties:Resources.BatchNumber}" Margin="0,0,10,0" Width="40"/>
                             <TextBox x:Name="AlgBatchCode" Style="{StaticResource TextBox.Small}"  Width="150" HorizontalAlignment="Left" />
                         </DockPanel>
                     </StackPanel>
